# apex-mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cursor/: mcp.json
.gemini/: settings.json
.github/: dependabot.yml
apex_mcp/: __init__.py  __main__.py  audit.py  config.py  db.py  exceptions.py  guards.py  i18n.py  ids.py  palette.py  server.py  session.py  templates.py  themes.py  utils.py  validators.py
apex_mcp/tools/: __init__.py  advanced_tools.py  app_tools.py  chart_tools.py  component_tools.py  devops_tools.py  generator_tools.py  inspect_tools.py  js_tools.py  page_tools.py  schema_tools.py  setup_tools.py  shared_tools.py  sql_tools.py  ui_tools.py  user_tools.py  validation_tools.py  visual_tools.py
demos/: _check_apps.py  _check_status.py  app204_docs.md  build_app100.py  build_app200.py  build_app201.py  build_app202.py  build_app203.py  build_app204.py  build_app205.py  build_app206.py  build_app207.py  build_app208.py  build_app209.py  demo_generate_docs.py  demo_rest_endpoints.py  specs.md
docs/: setup-claude.md  setup-cursor.md  setup-gemini.md  setup-gpt.md  setup-vscode.md  setup-zai.md
tests/: conftest.py  test_advanced_tools.py  test_audit.py  test_config.py  test_exceptions.py  test_generator_tools.py  test_guards.py  test_ids.py  test_infra.py  test_resources_prompts.py  test_session.py  test_templates.py  test_tool_errors.py  test_tools.py  test_utils.py  test_validators_extended.py  test_validators_new.py  test_visual_tools.py
