[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apex-mcp"
version = "0.3.0"
description = "MCP Server for Oracle APEX 24.2 — 116 tools, works with Claude, GPT, Gemini, Cursor, VS Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "oracledb>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live Oracle ADB connection",
    "slow: long-running tests",
]

[project.scripts]
apex-mcp = "apex_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["apex_mcp"]
